Fixed image not being visible on editor when added to the feature, added  solution to the image not being 100% when the feature widget is hidden, fixed the navigation not displaying correctly at mobile.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -67,7 +67,7 @@
     }
 }
 
-div[role="main"], .bk-footer {
+div[role="main"], .bk-footer .container {
     padding-left: 30px;
     padding-right: 30px;
     @media @tablet {
@@ -87,6 +87,17 @@ h5 {
     transition: background-color 0.5s ease;
 }
 
+body.edit { /* border for logo on editor */
+    .widget {
+        &.logo {
+            img {
+                border: 1px dashed red;
+                margin: 0 0 2px;
+            }
+        }
+    }
+}
+
 /* Header */
 
 .bk-header {
@@ -98,6 +109,11 @@ h5 {
     }
     .name {
         display: inline-block;
+        width: 30%;
+        @media @tablet {
+            padding-right: 5%;
+            width: 95%;
+        }
     }
     .companyname {
         a {
@@ -126,11 +142,14 @@ nav {
 
 .widget {
     &.extendednavigation {
+        display: inline-block;
         float: right;
-        width: 80%;
+        width: 69%;
+        vertical-align: baseline;
         @media @tablet {
+            displaY: block;
             float: none;
-            max-width: 100%;
+            width: 100%;
         }
         .extendednavigation {
             .clearfix;
@@ -148,14 +167,16 @@ nav {
                 float: initial;
                 padding: 8px 10px;
                 @media @tablet {
-                    border: none;
+                    border-bottom: 1px solid fade(@font-swatch6-color, 10%);
                     padding: 12px 25px;
                 }
                 &:hover {
-                    background-color: fade(@color-swatch6, 8%);
+                    background-color: darken(@font-swatch6-color, 80%);
+                    color: @color-swatch1;
                     transition: background-color 0.5s ease;
                     @media @tablet {
-                        background-color: @color-swatch6;
+                        background-color: darken(@font-swatch6-color, 80%);
+                        color: @color-swatch1
                     }
                     ul {
                         margin: 14px 0 0;
@@ -166,6 +187,7 @@ nav {
                 }
                 &:last-child {
                     @media @tablet {
+                        border-bottom: none;
                         border-right: none;
                         padding-bottom: 20px;
                     }
@@ -225,7 +247,7 @@ nav {
             display: none;
             @media @tablet {
                 right: 5px;
-                top: 15px;
+                top: -30px;
                 position: absolute;
                 display: inline-block;
                 width: 40px;
@@ -264,6 +286,8 @@ nav {
 .bk-feature { 
     padding: 10px;
     @media @tablet {
+        caption-side: top;
+        display: table;
         padding: 15px;
     }
     .widget {
@@ -272,6 +296,7 @@ nav {
             min-height: 450px;
             max-height: 550px;
             @media @tablet {
+                float: none;
                 min-height: 1px;
             }
             span img {
@@ -282,16 +307,16 @@ nav {
             }
         }
         &.image {
-            display: inline-block;
             padding: 0;
-            margin-right: 0.6%;
+            margin-left: 0.6%;
             width: 64.4%;
             @media @tablet {
+                display: table-header-group;
+                margin-bottom: 15px;
                 width: 100%;
             }
         }
         &.feature {
-            background-color: @color-swatch3;
             width: 35%;
             @media @tablet {
                 width: 100%;
@@ -306,12 +331,12 @@ nav {
         width: 65%;
         padding: 0;
         .feature-bgimg {
-            background-image: none!important;
             height: 450px;
             @media @tablet {
                 height: auto;
             }
             .content {
+                background-color: fade(@color-swatch3, 90%);
                 padding: 60px 0;
                 height: 450px;
                 @media @tablet {
@@ -355,6 +380,14 @@ nav {
             }
         }
     }
+}
+
+.widget.feature.bk-tpl-hidden + .widget.image {
+    display: block;
+    float: none;
+    margin: 0 auto;
+    position: relative;
+    width: 100%;
 }
 
 /* Ecommerce Product List */
@@ -736,7 +769,7 @@ div[role="main"] {
         }
     }
     .menu-header {
-        margin: 2.5em 0;
+        margin: 2.5em 0 0.75em;
         text-align: center;
         h1 {
             padding-bottom: 0;
@@ -747,13 +780,13 @@ div[role="main"] {
             }
         }
         p {
-            padding: 16px 0 10px;
+            padding: 5px 0 0;
         }
     }
     .menu-subsection {
         padding: 0;
         .menu-subsection-header {
-            padding: 30px 0;
+            padding: 20px 0;
             h2 {
                 color: @color-swatch4;
             }
